# heimdex

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG_CI_CD.md  CONTAINERIZED_CICD.md  Dockerfile.dev  FINAL_UV_SETUP.md  LICENSE  Makefile  README.md  UV_INTEGRATION_CORRECTED.md  UV_SETUP_FIXED.md  pyproject.toml  test_e2e_qdrant.py  todo.md
.github/workflows/: build.yml  ci.yml  infra.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/heimdex_api/: __init__.py
apps/api/src/heimdex_api/: __init__.py  db_init.py  jobs.py  logger.py  main.py  outbox_dispatcher.py  vectors.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/heimdex_worker/: __init__.py
apps/worker/src/heimdex_worker/: __init__.py  embeddings.py  logger.py  main.py  tasks.py
deploy/: .env.example  Makefile  docker-compose.yml  env.template
docs/: 2025-10-28-migration-to-alembic.md  MAINTENANCE_REPORT__2025-10-29.md  MIGRATION_REPORT.md  README.md  SQLALCHEMY_DEVELOPER_GUIDE.md  architecture.md  ci-cd.md  configuration.md  db-schema.md  microstep-0.8-qdrant-integration.md  microstep-0.9-real-embeddings.md  migration_inventory.md  pre-business-logic-checklist.md  qdrant-developer-guide.md  qdrant-documentation-index.md  qdrant-mock-to-production.md  qdrant-production-todos.md  sidecar-schema.md  todo.md  uv-integration.md
docs/api/: overview.md
docs/architecture/: overview.md
docs/development/: configuration.md
docs/infrastructure/: deployment.md
docs/migration/: 2025-10-28-migration-to-alembic.md  db-schema.md  migration-inventory.md  migration-report.md  sqlalchemy-developer-guide.md  testing-migrations.md
docs/security/: auth.md  overview.md
infra/terraform/: .gitignore  .secrets.baseline  .tflint.hcl  .tfsec.yml  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: README.md  run-tests.sh  setup-dev.sh  validate-config.sh  wait-for-services.sh
supabase/migrations/: 0001_job_ledger_init.sql  0002_job_ledger_hardening.sql
