[project]
name = "heimdex-api"
version = "0.0.1"
description = "Heimdex API service."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "dramatiq[redis]>=1.17.0,<2.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "redis>=5.0.0,<6.0.0",
    "heimdex-common",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
